src/assets/css/about_me/aboutme.css
.about_me {
    padding: 90px 80px;
    height: 70vh;
    background: var(--black);
}

.about_me_left {
    width: 50%;
    font-weight: 520;
}

.about_me_left div {
    display: flex;
    align-items: center;
}

.about_me_left p {
    font-size: 1.2rem;
    letter-spacing: 1.2px;
}

.about_me_left img {
    margin: 0 10px 0 0;
}

.about_me_right {
    width: 50%;
}

@media only screen and (max-width: 1082px) {
    .about_me {
        height: 100vh;
    }
}

